name:                NanoID
version:             3.4.1.1
synopsis:            NanoID generator
description:         Library and CLI tool for NanoID generation
license:             BSD3
license-file:        LICENSE
author:              Michel Boucey
maintainer:          michel.boucey@gmail.com
copyright:           (c) 2021-2025 - Michel Boucey
category:            Random, Data
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  ReadMe.md

Tested-With:
  GHC ==8.8.4
   || ==8.10.7
   || ==9.0.2
   || ==9.2.8
   || ==9.4.8
   || ==9.6.7
   || ==9.8.4
   || ==9.10.2
   || ==9.12.2

source-repository head
  type:     git
  location: https://github.com/MichelBoucey/NanoID.git

library
  hs-source-dirs:      src
  default-language:    Haskell2010
  exposed-modules:     Data.NanoID
  build-depends:       aeson      >= 1.5.6 && < 1.6 || >= 2.0 && < 2.3
                     , base       >= 4.7   && < 5
                     , bytestring >= 0.10  && < 0.13
                     , cereal     >= 0.5.8 && < 0.5.9
                     , extra      >= 1.6   && < 1.9
                     , mwc-random > 0.15  && < 0.16
                     , text       >= 1.2.3 && < 2.2

executable nanoid
  hs-source-dirs:      app
  main-is:             Main.hs
  default-language:    Haskell2010
  GHC-Options:         -Wall -O2
  other-modules:       Options
                       Paths_NanoID
  build-depends:       base                 >= 4.7  && < 5
                     , bytestring           >= 0.10 && < 0.13
                     , mwc-random           >= 0.13 && < 0.16
                     , NanoID
                     , optparse-applicative >= 0.14 && < 1
                     , bytestring-encodings >= 0.2 && < 1

